--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       background-color: white;
       font-family: Arial, sans-serif;
     }
+
     #visual-container {
       width: 90vw;
       height: 80vh;
@@ -24,6 +25,7 @@
       overflow: hidden;
       position: relative;
     }
+
     .media-content {
       width: 100%;
       height: 100%;
@@ -33,6 +35,7 @@
       top: 0;
       left: 0;
     }
+
     #playButton {
       margin: 24px auto 0 auto;
       padding: 14px 32px;
@@ -44,12 +47,14 @@
       font-weight: bold;
       cursor: pointer;
     }
+
     .elevator-option {
       width: 300px;
       margin: 20px;
       cursor: pointer;
       transition: transform 0.2s ease;
     }
+
     .elevator-option:hover {
       transform: scale(1.05);
     }
@@ -78,58 +83,59 @@
     let currentAudioFile = "";
     let availableAudios = [];
 
-    const audio = document.getElementById("myAudio");
-    const still1 = document.getElementById("stillframe1");
-    const still2 = document.getElementById("stillframe2");
-    const gapStill = document.getElementById("gapStillframe");
-    const v1 = document.getElementById("video1");
-    const vGap = document.getElementById("gapVideo");
-    const v2 = document.getElementById("video2");
-
-    const visuals = [
-      { el: still1, start: 0, end: 0 },
-      { el: v1, start: 0, end: 0 },
-      { el: gapStill, start: 0, end: 0 },
-      { el: vGap, start: 0, end: 0 },
-      { el: v2, start: 0, end: 0 },
-      { el: still2, start: 0, end: 0 }
-    ];
+    const visuals = [];
 
     window.onload = async () => {
       participantID = prompt("Enter your Participant ID:");
       if (!participantID) participantID = "anon_" + Math.floor(Math.random() * 100000);
       sessionID = `${participantID}_${new Date().toISOString()}`;
 
-      // Load audio files once and shuffle
       try {
         const response = await fetch("audio_files.csv");
         const text = await response.text();
         const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
         if (rows.length < totalTrials) throw new Error("Not enough unique audio files.");
-        shuffleArray(rows); // randomize order
-        availableAudios = rows.slice(0, totalTrials); // take only the first 3
+        shuffleArray(rows);
+        availableAudios = rows.slice(0, totalTrials);
       } catch (err) {
         alert("Failed to load audio files: " + err.message);
         return;
       }
 
+      setupVisualElements();
       updatePlayButton();
     };
 
+    function setupVisualElements() {
+      const still1 = document.getElementById("stillframe1");
+      const still2 = document.getElementById("stillframe2");
+      const gapStill = document.getElementById("gapStillframe");
+      const v1 = document.getElementById("video1");
+      const vGap = document.getElementById("gapVideo");
+      const v2 = document.getElementById("video2");
+      visuals.length = 0;
+      visuals.push(
+        { el: still1, start: 0, end: 0 },
+        { el: v1, start: 0, end: 0 },
+        { el: gapStill, start: 0, end: 0 },
+        { el: vGap, start: 0, end: 0 },
+        { el: v2, start: 0, end: 0 },
+        { el: still2, start: 0, end: 0 }
+      );
+    }
+
     function updatePlayButton() {
       const trialControls = document.getElementById("trialControls");
-      trialControls.innerHTML = `
-        <button id="playButton">Press to Begin Trial ${trialCounter} of ${totalTrials}</button>
-      `;
+      trialControls.innerHTML = `<button id="playButton">Press to Begin Trial ${trialCounter} of ${totalTrials}</button>`;
       document.getElementById("playButton").addEventListener("click", playTrial);
     }
 
     function hideAll() {
-      [still1, still2, gapStill, v1, vGap, v2].forEach(el => {
-        el.style.display = "none";
-        if (el.tagName === "VIDEO") {
-          el.pause();
-          el.currentTime = 0;
+      visuals.forEach(v => {
+        v.el.style.display = "none";
+        if (v.el.tagName === "VIDEO") {
+          v.el.pause();
+          v.el.currentTime = 0;
         }
       });
     }
@@ -143,19 +149,16 @@
         const originalSec = parseFloat(original);
         const gapSec = parseFloat(gap);
         const testSec = parseFloat(test);
-        const audioURL = filename;
+        const audio = document.getElementById("myAudio");
+        audio.src = filename;
         currentAudioFile = filename;
 
-        await Promise.all([
-          v1.play().then(() => v1.pause()),
-          vGap.play().then(() => vGap.pause()),
-          v2.play().then(() => v2.pause())
-        ]);
+        const [v1, vGap, v2] = visuals.filter(v => v.el.tagName === "VIDEO").map(v => v.el);
+        await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
 
         const video1Sec = v1.duration;
         const gapVideoSec = vGap.duration;
         const video2Sec = v2.duration;
-
         const preStillSec = Math.max(0, originalSec - video1Sec);
         const gapStillSec = Math.max(0, gapSec - gapVideoSec);
         const postStillSec = Math.max(0, testSec - video2Sec);
@@ -174,7 +177,6 @@
         visuals[5].start = t;
         visuals[5].end = t += postStillSec;
 
-        audio.src = audioURL;
         await new Promise((resolve, reject) => {
           audio.oncanplaythrough = resolve;
           audio.onerror = () => reject("Audio failed to load");
@@ -212,7 +214,6 @@
 
     function showResponseOptions() {
       document.body.innerHTML = "";
-
       const question = document.createElement("h1");
       question.textContent = "Which elevator did Melody ride?";
       document.body.appendChild(question);
@@ -260,9 +261,9 @@
       .then(() => {
         trialCounter++;
         if (trialCounter > totalTrials) {
-          document.body.innerHTML = `<h1>Thank you for participating! All trials complete.</h1>`;
+          document.body.innerHTML = `<div style="display: flex; justify-content: center; align-items: center; height: 100vh;"><h1>Thank you for participating! All trials complete.</h1></div>`;
         } else {
-          rebuildBaseHTML(); // resets visuals + button only
+          rebuildBaseHTML();
         }
       })
       .catch(err => {
@@ -284,6 +285,7 @@
         <audio id="myAudio" hidden preload="auto"></audio>
         <div id="trialControls"></div>
       `;
+      setupVisualElements();
       updatePlayButton();
     }
 
